--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,61 +22,61 @@
             android:name=".MenuPrincipal"
             android:label="@string/title_activity_menu_principal"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.cditi.sena.conversiones.Presion"
             android:label="@string/title_activity_presion"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.cditi.sena.conversiones.Temperatura"
             android:label="@string/title_activity_temperatura"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.cditi.sena.conversiones.Longitud"
             android:label="@string/title_activity_longitud"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.cditi.sena.conversiones.Superficie"
             android:label="@string/title_activity_superficie"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.cditi.sena.conversiones.Volumen"
             android:label="@string/title_activity_volumen"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.cditi.sena.conversiones.Masa"
             android:label="@string/title_activity_masa"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.cditi.sena.conversiones.Energia"
             android:label="@string/title_activity_energia"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.cditi.sena.conversiones.Fuerza"
             android:label="@string/title_activity_fuerza"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.cditi.sena.conversiones.Potencia"
             android:label="@string/title_activity_potencia"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.cditi.sena.conversiones.Viscosidad"
@@ -86,37 +86,41 @@
             android:name="com.cditi.sena.conversiones.Densidad"
             android:label="@string/title_activity_densidad"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.cditi.sena.conversiones.Cp"
             android:label="@string/title_activity_cp"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.cditi.sena.conversiones.CoeficienteTransferenciaCalor"
             android:label="@string/title_activity_coeficiente_transferencia_calor"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.cditi.sena.conversiones.ConductividadTermica"
             android:label="@string/title_activity_conductividad_termica"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.cditi.sena.conversiones.CaudalMasico"
             android:label="@string/title_activity_caudal_masico"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.cditi.sena.conversiones.CaudalVolumetrico"
             android:label="@string/title_activity_caudal_volumetrico"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
+        </activity>
+        <activity
+            android:name="com.cditi.sena.codigo.CodigoActivacion"
+            android:label="@string/title_activity_codigo_activacion" >
         </activity>
     </application>
 
